<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="wat.skat.skatliste.MainMenu"
    tools:showIn="@layout/activity_main_menu"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSpielFortsetzen"
            android:id="@+id/btnSpielFortsetzen"
            android:layout_gravity="center_horizontal"
            android:onClick="spielFortsetzen" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnNeuesSpiel"
            android:id="@+id/btnNeuesSpiel"
            android:layout_gravity="center_horizontal"
            android:onClick="neuesSpiel"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSpielLaden"
            android:id="@+id/btnSpielLaden"
            android:layout_gravity="center_horizontal"
            android:onClick="spielLaden" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="#ffbbbbbb">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fun Statistik erscheint hier..."
            android:id="@+id/tvStats"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>
